--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,6 @@
 @use 'sass:math';
 @use '~highlight.js/scss/default.scss';
 @import "BootstrapImport";
-// @import 'bootstrap/scss/bootstrap.scss';
 
 .article-title {
 	font-style: italic;
@@ -38,6 +37,7 @@ article {
 
 	.article-body {
 		font-size: 1.2rem;
+		line-height: 1.45;
 
 		h1, h2, h3, h4, h5, h6 {
 			font-weight: 300;
@@ -50,8 +50,16 @@ article {
 	}
 }
 
+.minicard {
+	img.card-img {
+		object-fit: cover;
+		height: 100%;
+		border-radius: 0 calc(0.25rem - 1px) 0 0 !important;
+	}
+}
+
 .hljs {
-	padding: 1rem;
+	padding: $spacer;
 }
 
 .masonry {
