that's a better way to escape link stretching imo. applied it to regular cards as well.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,13 @@ article {
 	}
 }
 
+.card, .minicard {
+	.byline > * {
+		position: relative;
+		z-index: 20;
+	}
+}
+
 .minicard {
 	img.card-img {
 		object-fit: cover;
