--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,7 +36,7 @@ article {
 
 	.article-body {
 		font-size: 1.2rem;
-		line-height: 1.45;
+		line-height: 1.5;
 
 		h1, h2, h3, h4, h5, h6 {
 			font-weight: 300;
@@ -50,7 +50,7 @@ article {
 }
 
 .card, .minicard {
-	.byline > * {
+	.card-text a, .byline > * {
 		position: relative;
 		z-index: 20;
 	}
