--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,17 +20,23 @@ article {
 
 	figure {
 		width: max-content;
+		max-width: 100%;
 		overflow-x: auto;
 		margin-left: auto;
 		margin-right: auto;
 		font-size: 1rem;
+		text-align: center;
 
-		img {
-			margin-bottom: .5rem;
-		}
 		figcaption, cite {
 			display: block;
-			text-align: left;
+		}
+	}
+
+	img {
+		margin-bottom: $spacer * 0.5;
+
+		&[srcset] {
+			width: auto;
 		}
 	}
 
@@ -39,7 +45,11 @@ article {
 		line-height: 1.5;
 
 		h1, h2, h3, h4, h5, h6 {
-			font-weight: 300;
+			margin-top: $spacer * 0.5;
+
+			&, & * {
+				font-weight: 300;
+			}
 		}
 	}
 
@@ -50,24 +60,39 @@ article {
 }
 
 .hero {
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-blend-mode: soft-light;
+	@supports (background-blend-mode: soft-light) {
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-blend-mode: soft-light;
+	}
+	@supports not (background-blend-mode: soft-light) {
+		background-image: none !important;
+	}
+}
+
+.card {
+	.card-img-top {
+		height: 340px;
+		width: 100%;
+		object-fit: cover;
+	}
+}
+
+.minicard {
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		@include border-radius(calc($border-radius - $border-width));
+		// border-radius: 0 calc(0.25rem - 1px) 0 0 !important;
+	}
 }
 
 .card, .minicard {
 	.card-text a, .byline > * {
 		position: relative;
 		z-index: 20;
-	}
-}
-
-.minicard {
-	img.card-img {
-		object-fit: cover;
-		height: 100%;
-		border-radius: 0 calc(0.25rem - 1px) 0 0 !important;
 	}
 }
 
@@ -83,14 +108,14 @@ article {
 }
 
 .masonry {
-	@include media-breakpoint-up(md){
+	@include media-breakpoint-up(lg){
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: masonry;
 		grid-gap: 1rem;
 		align-items: start;
 	}
-	@include media-breakpoint-down(md){
+	@include media-breakpoint-down(lg){
 		> :not(:last-child) {
 			margin-bottom: $spacer;
 		}
